# lore

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  action.yml  lore.py  lore_guidance.md  pyproject.toml  requirements.txt
.lore-docs/: LORE_ADR.md  LORE_SECURITY.md  PROJECT_STRUCTURE.md
cli/: adr.py  agent_delta.py  agent_history.py  agent_retrieval.py  agent_runner.py  agent_stage.py  agent_tools.py  apply.py  audit.py  audit_runner.py  batch.py  benchmark.py  brief_builder.py  cache.py  check_vuln.py  cve.py  cve_data.py  cve_registry.py  cve_runner.py  diff_server.py  feedback.py  gh_check.py  git_hook.py  html_builders.py  ingest_chat.py  ingest_github.py  ingest_slack.py  init.py  lsp.py  mcp_server.py  patch_validator.py  prompts.py  query.py  reindex.py  sandbox_evaluator.py  shared.py  v11_retrieval.py  vuln_analysis.py  vuln_cache.py  vuln_cure.py  (+2 more)
core/: _batch_consolidator.py  _cold_start.py  _cold_start_intent.py  _dl_link_builders.py  _dl_mention_builder.py  _intent_miner.py  _macro_change.py  ast_extractor.py  ast_patcher.py  ast_patcher_core.py  ast_taint.py  ast_taint_helpers.py  base_tracer.py  boundary_miner.py  chat_miner.py  cst_patcher.py  decision_linker.py  git_historian.py  git_miner.py  guardian.py  invariant_miner.py  llm_client.py  qa_engine.py  reconciler.py  symbol_db.py  symbol_extractor.py  symbol_map.py  symbol_retriever.py  symbol_scanner.py  symbol_types.py
examples/: README.md
parsers/: go_parser.py  go_taint_tracer.py  parse_result.py  ts_taint_tracer.py  typescript_parser.py
tests/: conftest.py  test_ast_patcher.py  (+22 more)
(+15 files in other folders)
