[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lore"
version = "1.5.0"
description = "LORE: Local Institutional Memory for Enterprise Codebases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.7.0",
    "fastapi>=0.100.0",
    "libcst>=1.0.0",
    "networkx>=3.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sqlite-vec>=0.1.0",
    "tree-sitter-languages>=1.8.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.20.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/filippogabriele19/lore"
Repository = "https://github.com/filippogabriele19/lore"
Issues = "https://github.com/filippogabriele19/lore/issues"

[project.scripts]
lore = "lore:main"

[tool.setuptools]
py-modules = ["lore"]
packages = ["core", "cli", "parsers"]

[tool.setuptools.package-data]
"cli" = ["templates/*.html"]
